--- a/attached_assets/index.html
+++ b/attached_assets/index.html
@@ -8,12 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="loginPage" style="display: none;">
-        <h1>Login</h1>
-        <input type="email" id="loginEmail" placeholder="Enter your ByteDance or Lark email">
-        <button id="loginButton">Login</button>
-    </div>
-    <div class="container" id="appContainer" style="display: none;">
+    <div class="container">
         <h1>ModQuery</h1>
         <form id="messageForm">
             <div class="form-row">
@@ -65,17 +60,12 @@
             <p>Message sent successfully!</p>
         </div>
         <div class="trademark">MIRI™</div>
-    </div>
+        </div>
 
     <script>
         const uploadZone = document.getElementById('uploadZone');
         const imageInput = document.getElementById('image');
         const imagePreview = document.getElementById('imagePreview');
-        const loginPage = document.getElementById('loginPage');
-        const appContainer = document.getElementById('appContainer');
-        const loginEmailInput = document.getElementById('loginEmail');
-        const loginButton = document.getElementById('loginButton');
-
 
         // Handle click on upload zone
         uploadZone.addEventListener('click', () => {
@@ -129,10 +119,12 @@
         }
 
         function handleImageFile(file) {
+            // Create a new FileList object
             const dataTransfer = new DataTransfer();
             dataTransfer.items.add(file);
             imageInput.files = dataTransfer.files;
 
+            // Show preview
             const reader = new FileReader();
             reader.onload = (e) => {
                 imagePreview.innerHTML = `
@@ -160,95 +152,45 @@
             document.getElementById('previewBox').style.display = message ? 'block' : 'none';
         }
 
+        // Add input listeners for preview
         ['alias', 'reply_to', 'message', 'video_id', 'link', 'queue'].forEach(id => {
             document.getElementById(id).addEventListener('input', updatePreview);
         });
 
-
-        loginButton.addEventListener('click', () => {
-            const email = loginEmailInput.value;
-            if (email.includes('@bytedance.com') || email.includes('@lark.com')) {
-                sessionStorage.setItem('userEmail', email);
-                loginPage.style.display = 'none';
-                appContainer.style.display = 'block';
-            } else {
-                alert('Please use a ByteDance or Lark email.');
-            }
-        });
-
-        if (!sessionStorage.getItem('userEmail')) {
-            loginPage.style.display = 'block';
-        } else {
-            appContainer.style.display = 'block';
-        }
-
-
         document.getElementById('messageForm').addEventListener('submit', async (e) => {
-            const userEmail = sessionStorage.getItem('userEmail');
             e.preventDefault();
             const alias = document.getElementById('alias').value;
-            const replyTo = document.getElementById('reply_to').value;
-            const videoId = document.getElementById('video_id').value;
-            const queue = document.getElementById('queue').value;
+            const video_id = document.getElementById('video_id').value;
             const link = document.getElementById('link').value;
             const message = document.getElementById('message').value;
-            const imageFile = imageInput.files[0];
 
             const formData = new FormData(e.target);
-            formData.append('userEmail', userEmail);
-            formData.append('timestamp', new Date().toISOString());
-            if (imageFile) formData.append('image', imageFile);
 
-
+            // Reset success message visibility before sending
             document.getElementById('successMessage').style.display = 'none';
 
             try {
-                if (!message.trim()) {
-                    throw new Error('Message is required');
-                }
-
-                const serverFormData = new FormData();
-                for (let [key, value] of formData.entries()) {
-                    if (key === 'image') {
-                        if (!value || value.size === 0) continue;
-                        if (value.size > 5 * 1024 * 1024) {
-                            throw new Error('Image size must be less than 5MB');
-                        }
-                        if (!value.type.startsWith('image/')) {
-                            throw new Error('Only image files are allowed');
-                        }
-                        serverFormData.append('image', value);
-                    } else if (value) {
-                        serverFormData.append(key, value.trim());
-                    }
-                }
-
-                const serverResponse = await fetch('/sendMessage', {
+                const response = await fetch('/sendMessage', {
                     method: 'POST',
-                    body: serverFormData
+                    body: formData
                 });
 
-                const responseData = await serverResponse.json();
-
-                if (!serverResponse.ok) {
-                    throw new Error(responseData.error || 'Server request failed');
+                const result = await response.json();
+                if (response.ok) {
+                    // Display success message
+                    document.getElementById('successMessage').style.display = 'block';
+                    // Reset form
+                    e.target.reset();
+                    // Clear image preview
+                    imagePreview.innerHTML = '';
+                    // Clear preview box
+                    document.getElementById('previewBox').style.display = 'none';
+                    document.getElementById('previewContent').innerText = '';
+                } else {
+                    alert('Failed to send message.');
                 }
-
-                // Then send to Google Sheets
-                // Google Sheets submission is now handled by the backend
-
-                // Show success message and reset form
-                document.getElementById('successMessage').style.display = 'block';
-                e.target.reset();
-                imagePreview.innerHTML = '';
-                document.getElementById('previewBox').style.display = 'none';
-                document.getElementById('previewContent').innerText = '';
             } catch (error) {
                 console.error('Error:', error);
-                const errorMessage = document.getElementById('successMessage');
-                errorMessage.style.color = 'red';
-                errorMessage.innerText = error.message || 'Failed to send message';
-                errorMessage.style.display = 'block';
             }
         });
     </script>
